# API-Gateway

./: .gitignore  API-CLIENT.org  Dockerfile  README.md  pyproject.toml
configs/: hypercorn.yaml
src/api_gateway/: config.py  docs.py  logger.py  main.py  router.py  server.py  versioner.py
src/grpc_clients/: game_scene.py
src/middlewares/: game_scene.py
src/routers/: game_scene.py
src/schemas/: game_scene.py
