[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for the Spichki Game"
authors = ["SciBourne <bourne-sci-hack@yandex.ru>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
hypercorn = "^0.14.3"
grpcio = "^1.51.3"
grpcio-tools = "^1.51.3"
fastapi-versioning = "^0.10.0"
grpc-api-generator = {git = "https://github.com/Spichki-Game/gRPC-API-generator.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
jedi = "^0.18.2"
yapf = "^0.32.0"
autopep8 = "^2.0.2"
mypy = "^1.1.1"

[tool.poetry.scripts]
generate-api = "grpc_api_generator:run"
api-gateway = "api_gateway.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
